# VPSC-GUI

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  REVISION_NOTES_v1.0.1.md  pyproject.toml
docs/: softwarex_paper_outline.md
docs/figures/: README.md
docs/screenshots/: README.md
examples/BCC_FCC_Tension/: BCC_texture.tex  FCC_texture.tex  tension  vpsc8.in
examples/FCC_rolling/: FCC.sx  vpsc8.in
examples/HCP_compression/: Mg_voce.sx  Rand500.tex  compression.3  vpsc8.in
src/vpsc_gui/: __init__.py  __main__.py  app.py
tests/: test_multiphase.py  test_selftest.py
