[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpsc-gui"
version = "1.0.0"
description = "A Python graphical pre- and post-processing environment for VPSC8 simulations."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Zhiyang Ni" },
  { name = "Min Guo" },
  { name = "Zhanghua Chen" },
  { name = "Jianxin Dong" },
  { name = "He Jiang", email = "jianghe17@sina.cn" }
]
keywords = [
  "VPSC",
  "crystal plasticity",
  "polycrystal plasticity",
  "texture",
  "Python GUI",
  "post-processing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Environment :: MacOS X",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.5"
]

[project.optional-dependencies]
smoothing = [
  "scipy>=1.8"
]
dev = [
  "pytest>=7.0",
  "build>=1.0"
]

[project.urls]
Homepage = "https://github.com/ZhiyangNi/VPSC-GUI"
Repository = "https://github.com/ZhiyangNi/VPSC-GUI"
Issues = "https://github.com/ZhiyangNi/VPSC-GUI/issues"
Documentation = "https://github.com/ZhiyangNi/VPSC-GUI/blob/main/README.md"

[project.scripts]
vpsc-gui = "vpsc_gui.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
