[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpsc-gui"
version = "1.0.1"
description = "A Python graphical pre- and post-processing environment for the VPSC8 code."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Zhiyang Ni"},
  {name = "Min Guo"}
]
keywords = [
  "VPSC",
  "polycrystal plasticity",
  "texture",
  "Python GUI",
  "pre- and post-processing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "build>=1.0"]

[project.scripts]
vpsc-gui = "vpsc_gui.app:main"

[project.urls]
Homepage = "https://github.com/ZhiyangNi/VPSC-GUI"
Documentation = "https://github.com/ZhiyangNi/VPSC-GUI#readme"
Repository = "https://github.com/ZhiyangNi/VPSC-GUI"
Issues = "https://github.com/ZhiyangNi/VPSC-GUI/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vpsc_gui = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
